# fastapi-alembic-sqlmodel-async

./: .env.example  .gitignore  404.html  CHANGELOG.md  LICENSE  Makefile  README.md  create-dbs.sql  docker-compose-dev.yml  docker-compose-sonarqube.yml  docker-compose-test.yml  docker-compose.yml  index.html  pgadmin.yml  sitemap.xml
.github/workflows/: deploy_docs.yml  main.yml
assets/css/: styles.53758859.css
assets/js/: 01a85c17.696687ae.js  0e384e19.057c2d60.js  0ed2f8f2.9e8b9afe.js  14eb3368.81819307.js  18c41134.70b45bfb.js  1a29a149.d426eaf2.js  1be78505.c44dd925.js  1df93b7f.7410ffe0.js  1e4232ab.5290d5f4.js  1f391b9e.3b3b0402.js  210.d9a5d00a.js  23487219.b068e294.js  2529.0243ff6b.js  393be207.d1b29774.js  4d542b71.3cc999d6.js  533a09ca.0c964989.js  55055686.ff383b1d.js  59362658.7daf33a0.js  59cc6102.9c663380.js  5c868d36.34af888e.js  73664a40.af60fe19.js  7661071f.e3ae9db7.js  7e887c4b.4e1683ea.js  814f3328.eb404c0b.js  822bd8ab.7e9fa853.js  8717b14a.cf3b5a1a.js  8e084293.372903d8.js  925b3f96.a342bc50.js  935f2afb.3b27ae0a.js  980ef064.0e9f5be8.js  9e4087bc.4f0b4006.js  c8a5ec61.20f39fe3.js  d8cdd2fb.6e9e8bbb.js  d9f32620.42318944.js  dcc466c6.ec035b09.js  dd5c56c4.e310792c.js  dee32608.d657172e.js  dff1c289.dc8ed0bf.js  e273c56f.ff20260f.js  e44a2883.9462e2f2.js  (+6 more)
backend/: Dockerfile  sonar-project.properties
backend/app/: alembic.ini  pyproject.toml
backend/app/alembic/: env.py  script.py.mako
backend/app/alembic/versions/: 2022-09-25-19-46_60d49bf413b8.py  2022-11-03-14-16_3293815eb23c.py  2023-03-04-23-15_5591a516fc47.py  2023-03-17-17-34_13d2068684ab.py
backend/app/app/: initial_data.py  main.py
backend/app/app/api/: celery_task.py  deps.py
backend/app/app/api/v1/: api.py
backend/app/app/api/v1/endpoints/: cache.py  group.py  hero.py  login.py  natural_language.py  periodic_tasks.py  report.py  role.py  team.py  user.py  weather.py
backend/app/app/core/: authz.polar  authz.py  celery.py  config.py  main.polar  security.py
backend/app/app/crud/: __init__.py  base_crud.py  group_crud.py  hero_crud.py  image_media_crud.py  role_crud.py  team_crud.py  user_crud.py  user_follow_crud.py
backend/app/app/db/: init_db.py  session.py
backend/app/app/models/: __init__.py  base_uuid_model.py  group_model.py  hero_model.py  image_media_model.py  links_model.py  media_model.py  role_model.py  team_model.py  user_follow_model.py  user_model.py
backend/app/app/schemas/: common_schema.py  group_schema.py  hero_schema.py  image_media_schema.py  media_schema.py  response_schema.py  role_schema.py  team_schema.py  user_follow_schema.py  user_schema.py
backend/app/app/utils/: fastapi_globals.py  map_schema.py  minio_client.py  partial.py  print_model.py  requestvars.py  snowflake.py  token.py  uuid6.py
backend/app/app/utils/exceptions/: __init__.py  user_follow_exceptions.py
backend/app/test/: test_main.py
backend/app/test/api/: test_login.py  test_user.py
blog/: atom.xml  index.html  rss.xml
blog/archive/: index.html
blog/first-blog-post/: index.html
blog/long-blog-post/: index.html
blog/mdx-blog-post/: index.html
blog/tags/: index.html
caddy/: Caddyfile
docs/: README.md  docusaurus.config.js  package-lock.json
fastapi-alembic-sqlmodel-async/: Dockerfile  alembic.ini  pyproject.toml  setup.cfg  sonar-project.properties
fastapi-alembic-sqlmodel-async/alembic/: env.py
fastapi-alembic-sqlmodel-async/alembic/versions/: 05cbf1b84e31_.py  2022-10-03-18-32_3223652d21bd.py  2022-10-23-04-07_cc36a024e8ed.py  3d0f6d4d5897_.py  4031f5ef0a31_.py  669125bdb1f0_.py  7366d3306193_.py  87c03ee7f382_.py  bd0d270be7ce_.py  c00b57daea0b_.py  c72b32ea2da2_.py  d95c7fb0f421_.py  ea354314593d_.py
fastapi-alembic-sqlmodel-async/app/: initial_data.py  main.py  sonar-project.properties
fastapi-alembic-sqlmodel-async/app/api/: deps.py
fastapi-alembic-sqlmodel-async/app/api/api_v1/: api.py
fastapi-alembic-sqlmodel-async/app/api/api_v1/endpoints/: cache.py  group.py  hero.py  login.py  login_form.py  role.py  song.py  team.py  user.py
fastapi-alembic-sqlmodel-async/app/api/v1/: api.py
fastapi-alembic-sqlmodel-async/app/api/v1/endpoints/: cache.py  group.py  hero.py  login.py  role.py  team.py  user.py  weather.py
fastapi-alembic-sqlmodel-async/app/core/: config.py  security.py
fastapi-alembic-sqlmodel-async/app/crud/: __init__.py  base_crud.py  base_sqlmodel.py  crud_group.py  crud_hero.py  crud_role.py  crud_song.py  crud_team.py  crud_user.py  group_crud.py  hero_crud.py  media_crud.py  role_crud.py  team_crud.py  user_crud.py  user_follow_crud.py
fastapi-alembic-sqlmodel-async/app/db/: async_sqlmodel.py  auth_session.py  init_db.py  session.py
fastapi-alembic-sqlmodel-async/app/models/: __init__.py  base_uuid_model.py  group.py  group_model.py  hero.py  hero_model.py  hero_team.py  links.py  links_model.py  media_model.py  role.py  role_model.py  song.py  team.py  team_model.py  user.py  user_follow_model.py  user_model.py  user_role.py
fastapi-alembic-sqlmodel-async/app/schemas/: common.py  common_schema.py  group.py  group_schema.py  hero.py  hero_schema.py  hero_team.py  media_schema.py  response_schema.py  role.py  role_schema.py  song.py  team.py  team_schema.py  token.py  token_schema.py  user.py  user_follow_schema.py  user_schema.py
fastapi-alembic-sqlmodel-async/app/utils/: keycloak.py  map_schema.py  minio_client.py  partial.py  print_model.py  requestvars.py  resize_image.py  snake_case_converter.py  snowflake.py  token.py  uuid6.py  uuid7.py
fastapi-alembic-sqlmodel-async/app/utils/exceptions/: __init__.py  common_exception.py  group_exceptions.py  hero_exceptions.py  role_exceptions.py  team_exceptions.py  user_exceptions.py  user_follow_exceptions.py
keycloak/: realm-export.json
markdown-page/: index.html
nginx-config-files/: app.nginx.template  nginx.conf
pgadmin/: servers.json
static/: diagrams
terraform/: .terraform.lock.hcl  1_vpc.tf  2_subnets.tf  3_elastic_beanstalk.tf  4_rds.tf  README.md  locals.tf  main.tf  variables.tf  versions.tf
traefik/: .htpasswd  traefik.yml
(+17 files in other folders)
