[tool.poetry]
name = "fastapi-alembic-sqlmodel-async"
version = "0.1.0"
description = ""
authors = ["jonra1993 <jon_ra@hotmail.es>"]

[tool.black]
line-length = 88
target-version = [ "py37", "py38", "py39",]
exclude = "((.eggs | .git | .pytest_cache | build | dist))"

[tool.poetry.dependencies]
python = "^3.8"
alembic = "^1.8.1"
asyncpg = "^0.27.0"
fastapi = {extras = ["all"], version = "^0.88.0"}
sqlmodel = "^0.0.8"
python-jose = "^3.3.0"
cryptography = "^38.0.3"
passlib = "^1.7.4"
SQLAlchemy-Utils = "^0.38.3"
SQLAlchemy = "^1.4.40"
fastapi-pagination = {extras = ["sqlalchemy"], version = "^0.11.0"}
fastapi-cache2 = {extras = ["redis"], version = "^0.1.9"}
fastapi-async-sqlalchemy = "^0.3.12"
aioredis = "^2.0.1"
minio = "^7.1.12"
Pillow = "^9.3.0"
watchfiles = "^0.18.1"
asyncer = "^0.0.2"
httpx = "^0.23.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.10.0"
flake8 = "^5.0.4"
flake8-docstrings = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
